--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -24,7 +24,7 @@ body
       .row
         .col-md-6.col-md-offset-3
           - if notice.present?
-            .alert.alert-warning = notice
+            .alert.alert-success = notice
           - if alert.present?
             .alert.alert-danger = alert
         .col-md-12
