--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -3,8 +3,12 @@ h2.text-center Sign up
   .col-md-6.col-md-offset-3
     = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
       = devise_error_messages!
+      .row
+        .col-md-6
+          = f.input :first_name
+        .col-md-6
+          = f.input :last_name
       = f.input :email, autofocus: true
-
       = f.label :password
       - if @validatable
         em
