--- a/app/assets/stylesheets/layouts/_variables.css.scss
+++ b/app/assets/stylesheets/layouts/_variables.css.scss
@@ -1,6 +1,7 @@
 $height: (
+  header: 70px,
   footer: 40px
 );
-$root-selector: '#root';
+$root-selector: '.content-wrap';
 $root-footer-selector: 'main';
 $footer-selector: 'footer';
