create migrate for gallery

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,8 @@
 @import "bootstrap";
 @import "compass";
 @import "compass/layout";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 @import "helpers/all";
 @import "layouts/default";
 @import "home/index";
