--- a/app/assets/stylesheets/layouts/_default.css.scss
+++ b/app/assets/stylesheets/layouts/_default.css.scss
@@ -30,8 +30,7 @@ header {
     li {
       &.profile {
         >*{display: inline-block}
-        img{ width: 30px; border-radius: 50%; margin-left: 15px; }
-        a { padding-left: 5px}
+        img{ width: 30px; border-radius: 50% }
       }
       a {
         line-height: 50px;
