--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,30 +8,32 @@ head
 body
   .page-wrap
     header
-      .row
-        .col-md-2.col-md-offset-1
-          .logo
-            = link_to image_tag('delivery-512.png'), root_url
-        .col-md-8
-          ul.nav.nav-pills.pull-right
-            - if user_signed_in?
-              li = link_to 'My Gallery'
-              li.profile = active_link_to image_tag(current_user.profile.avatar_url) + '   Profile', user_profile_path(current_user)
-              li = link_to 'Sign out', destroy_user_session_path, method: :delete
+      .container
+        .row
+          .col-md-2.col-md-offset-1.col-sm-2.col-sm-offset-1.col-xs-2
+            .logo
+              = link_to image_tag('delivery-512.png'), root_url
+          .col-md-8.col-sm-8.col-xs-10
+            ul.nav.nav-pills.pull-right
+              - if user_signed_in?
+                li = link_to 'My Gallery', pictures_path
+                li.profile = active_link_to image_tag(current_user.profile.avatar_url) + '   Profile', user_profile_path(current_user)
+                li = link_to 'Sign out', destroy_user_session_path, method: :delete
 
-            - else
-              li = active_link_to 'Sign up', new_user_registration_path
-              li = active_link_to 'Login', new_user_session_path
+              - else
+                li = active_link_to 'Sign up', new_user_registration_path
+                li = active_link_to 'Login', new_user_session_path
     main
-      .row
-        .col-md-6.col-md-offset-3
-          - if notice.present?
-            .alert.alert-success = notice
-          - if alert.present?
-            .alert.alert-danger = alert
-      .row
-        .col-md-12
-          == yield
+      .container
+        .row
+          .col-md-6.col-md-offset-3
+            - if notice.present?
+              .alert.alert-success = notice
+            - if alert.present?
+              .alert.alert-danger = alert
+        .row
+          .col-md-12
+            == yield
   footer
     .row: .col-md-12.text-center
       | Copyright © #{Time.now.year} Rudolf Kovalyov
