completed searching images and fixed front-end

--- a/app/assets/stylesheets/helpers/all.css.scss
+++ b/app/assets/stylesheets/helpers/all.css.scss
@@ -1,1 +1,40 @@
 .pointer { cursor: pointer }
+.ellipsis { @include ellipsis }
+
+.v-center {
+  display:table;
+  height: 100%;
+  &>div {
+    display: table-cell;
+    vertical-align:middle;
+  }
+}
+
+.thumbnails {
+  &.images {
+    @extend .text-center;
+    @extend .clearfix;
+    .item {
+      position: relative;
+      width: 220px; height: 300px;
+      float: left;
+      margin: 5px;
+      .image-wrap {
+        height: 220px;
+        overflow: hidden;
+        border-bottom: 1px solid #cacaca;
+        img {width: 100%; border-radius: 5px;}
+      }
+      .control {
+        position: absolute;
+        top: -12px; right: -4px;
+        font-size: 20px;
+        .delete {
+          color: $brand-danger;
+        }
+      }
+
+    }
+  }
+  .item { @extend .thumbnail }
+}
