--- a/app/views/pictures/index.html.slim
+++ b/app/views/pictures/index.html.slim
@@ -3,19 +3,25 @@
   .row
     .col-md-10.col-md-offset-1
       h1.text-center
-        | Pictures
+        | My Pictures
         span.small = link_to ' [+]', new_picture_path
       - if @pictures.empty?
         .text-center
           | You haven't pictures. #{link_to 'New Picture', new_picture_path}
       - else
-        .images
+        .thumbnails.images
           - @pictures.each do |picture|
-            .item.thumbnail
-              = image_tag picture.image.url
+            .item
+              .image-wrap
+                = image_tag picture.image.url
               .caption
-                div = picture.name
-                = link_to 'Edit ', edit_picture_path(picture)
-                = link_to 'Destroy', picture_path(picture), data: {:confirm => 'Are you sure?'}, :method => :delete
-
-
+                .ellipsis: b = picture.name
+                - unless picture.hashtags.empty?
+                  - picture.get_hashtags_array.each do |hashtag|
+                    = link_to hashtag, root_path(search: hashtag)
+                .control
+                  = link_to fa_icon('edit'), edit_picture_path(picture)
+                  = link_to fa_icon('remove'), picture_path(picture),
+                            class: 'delete',
+                            data: {confirm: 'Are you sure?'},
+                            method: :delete
