--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,7 @@
-@import "bootstrap";
+@import "_bootstrap";
 @import "compass";
 @import "compass/layout";
+@import "ekko-lightbox";
 @import "font-awesome";
 @import "helpers/all";
 @import "layouts/default";
