--- a/app/assets/stylesheets/helpers/all.css.scss
+++ b/app/assets/stylesheets/helpers/all.css.scss
@@ -19,12 +19,18 @@
       width: 220px; height: 300px;
       float: left;
       margin: 5px;
+      .lightbox-link {
+        position: absolute;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+      }
       .image-wrap {
         height: 220px;
         overflow: hidden;
         border-bottom: 1px solid #cacaca;
         img {width: 100%; border-radius: 5px;}
       }
+      .hashtag-link { position: relative; z-index: 1 }
       .control {
         position: absolute;
         top: -12px; right: -4px;
