--- a/app/views/user_profiles/show.html.slim
+++ b/app/views/user_profiles/show.html.slim
@@ -8,7 +8,8 @@
             = image_tag current_user.profile.avatar_url
 
           .nav-links
-            big = link_to 'Edit', edit_user_profile_path
+            - if can? :update, @user.profile
+              big = link_to 'Edit', edit_user_profile_path
         .col-md-8
           h4 = @user.full_name
           em = @user.email
