editing config for production and refactoring code

--- a/app/views/devise/confirmations/new.html.slim
+++ b/app/views/devise/confirmations/new.html.slim
@@ -1,3 +1,4 @@
+- provide(:title, 'Resend confirmation instructions')
 h2.text-center Resend confirmation instructions
 .row
   .col-md-6.col-md-offset-3
