--- a/app/views/user_profiles/edit.html.slim
+++ b/app/views/user_profiles/edit.html.slim
@@ -2,18 +2,18 @@
 #user-profile
   .row
     .col-md-8.col-md-offset-2
-      = simple_form_for current_user, url: user_profile_path(current_user.profile), method: 'put' do |f|
+      = simple_form_for @user, url: user_profile_path(@user), method: 'put' do |f|
         .row
           .col-md-4.text-center
             .avatar.js-preview.js-resize
-              = image_tag current_user.profile.avatar_url
+              = image_tag @user.profile.avatar_url
             .div
-              = f.simple_fields_for :profile, current_user.profile do |p|
+              = f.simple_fields_for :profile, @user.profile do |p|
                 = p.file_field :avatar, accept: 'image/*', label:false
             .nav-links
           .col-md-8
             .form-group
-              | Email:  <em>#{current_user.email}</em>
+              | Email:  <em>#{@user.email}</em>
             = f.input :first_name
             = f.input :last_name
             .form-group
