--- a/app/views/pictures/index.html.slim
+++ b/app/views/pictures/index.html.slim
@@ -19,7 +19,7 @@
                 .ellipsis: b = picture.name
                 - unless picture.hashtags.empty?
                   - picture.get_hashtags_array.each do |hashtag|
-                    = link_to hashtag, root_path(search: hashtag)
+                    = link_to hashtag, root_path(search: hashtag), class: 'hashtag-link'
                 .control
                   = link_to fa_icon('edit'), edit_picture_path(picture)
                   = link_to fa_icon('remove'), picture_path(picture),
